--- a/platform/src/main/resources/application.properties
+++ b/platform/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8090
 local.server.port=8090
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/car?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root903226
