--- a/platform/build.gradle
+++ b/platform/build.gradle
@@ -13,7 +13,11 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+//    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile("org.junit.jupiter:junit-jupiter-api:5.4.0")
+    testRuntime("org.junit.jupiter:junit-jupiter-engine:5.4.0")
+    // https://mvnrepository.com/artifact/org.junit.platform/junit-platform-suite-api
+    testCompile group: 'org.junit.platform', name: 'junit-platform-suite-api', version: '1.3.2'
     compile("org.springframework.boot:spring-boot-starter-web")
     // JPA Data (We are going to use Repositories, Entities, Hibernate, etc...)
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
