--- a/platform/build.gradle
+++ b/platform/build.gradle
@@ -23,6 +23,9 @@ dependencies {
     // JPA Data (We are going to use Repositories, Entities, Hibernate, etc...)
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.0.3.RELEASE'
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.1.3.RELEASE'
+
     // Use MySQL Connector-J
     compile 'mysql:mysql-connector-java'
     //compile("org.springframework.boot:spring-boot-starter-security")
