--- a/platform/src/main/resources/application.properties
+++ b/platform/src/main/resources/application.properties
@@ -15,5 +15,7 @@ logging.level.root=DEBUG
 
 spring.jpa.database=mysql
 # security
-#spring.security.user.name=admin
-#spring.security.user.password=admin
+spring.security.user.name=user # Default user name.
+spring.security.user.password=user # Password for the default user name.
+#discard auto configuration of spring security
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
