--- a/platform/src/main/resources/application.properties
+++ b/platform/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=WantCars
 server.port=8090
 local.server.port=8090
 #spring.jpa.hibernate.ddl-auto=update
@@ -6,7 +7,7 @@ spring.datasource.driverClassName = com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:3306/${MYSQL_DB}?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=PST
 spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${MYSQL_PASSWORD}
-logging.level.org.springframework.web=DEBUG
+
 #logging.level.org.hibernate=ERROR
 
 logging.path=/Users/test/logger
@@ -19,3 +20,6 @@ spring.security.user.name=user # Default user name.
 spring.security.user.password=user # Password for the default user name.
 #discard auto configuration of spring security
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+logging.level.org.springframework.web=DEBUG
+logging.level.org.mybatis=DEBUG
+#logging.file=logs/spring-boot-logging.log
